# dify_plugin_bocha_search_context

./: .gitignore  README.md  pyproject.toml
bocha_search_context/: .difyignore  .env.example  README.md  manifest.yaml  requirements.txt
bocha_search_context/provider/: bocha_search_context.py  bocha_search_context.yaml  web_search_context.yaml
bocha_search_context/tools/: __init__.py  _search_client.py  bocha_search_context.py  bocha_search_context.yaml  bocha_web_search_context.py  bocha_web_search_context.yaml  web_search_context.py  web_search_context.yaml
difypkg/: bocha_search_context-0.1.0.difypkg  web_search_context-0.2.0.difypkg  web_search_context-0.2.1.difypkg
